<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create">

    <android.support.constraint.ConstraintLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="536dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_margin="10dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="text" />

            <Spinner
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:dropDownWidth="match_parent"
                android:entries="@array/year"
                android:prompt="@string/year"
                android:spinnerMode="dialog"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/college"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_margin="10dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/college"
                android:inputType="text" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_margin="10dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/location"
                android:inputType="text" />

            <Spinner
                android:id="@+id/department"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:backgroundTint="#7E7676"
                android:dropDownWidth="match_parent"
                android:entries="@array/branch_name"
                android:prompt="@string/branch_name"
                android:spinnerMode="dialog"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.013">

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>